force-app/main/default/objects/passbook__c/passbook__c.object-meta.xml
<CustomObject>
    <label>Passbook</label>
    <nameField>
        <label>passbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passboks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>