force-app/main/default/objects/passbook__c/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <label>Expense_Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>