force-app/main/default/objects/passbook__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>